[package]
name = "monitor-core"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
redis = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
config = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
jsonwebtoken = { workspace = true }
argon2 = { workspace = true }
reqwest = { workspace = true }
