[package]
name = "monitor-scripting"
version = "0.1.0"
edition = "2024"

[dependencies]
monitor-core = { path = "../monitor-core" }
tokio = { workspace = true }
rquickjs = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
